src/objects/Budget__c.object
<CustomObject>
    <fields>
        <fullName>Assignment__c</fullName>
        <label>Assignment</label>
        <referenceTo>Assignment__c</referenceTo>
        <relationshipLabel>Budget</relationshipLabel>
        <relationshipName>Budget</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Availability__c</fullName>
        <label>Availability</label>
        <referenceTo>Availability__c</referenceTo>
        <relationshipLabel>Budget</relationshipLabel>
        <relationshipName>Budget</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Forecasted_Cost__c</fullName>
        <formula>Forecasted_Hours__c  *  Assignment__r.Cost_Rate__r.Hourly_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecasted Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecasted_Earnings__c</fullName>
        <formula>Forecasted_Hours__c  *  Assignment__r.Rate__r.Hourly_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecasted Earnings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecasted_Hours__c</fullName>
        <label>Assigned Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Worked__c</fullName>
        <label>Hours Worked</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Week</label>
        <referenceTo>Week__c</referenceTo>
        <relationshipLabel>Budget</relationshipLabel>
        <relationshipName>Budget</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Budget</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Availability__c</columns>
        <columns>Assignment__c</columns>
        <columns>Week__c</columns>
        <columns>Forecasted_Hours__c</columns>
        <columns>Hours_Worked__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BUD-{0000}</displayFormat>
        <label>Budget Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>